[gd_scene load_steps=3 format=3 uid="uid://75h212rvnrjv"]

[ext_resource type="Script" uid="uid://bnc2q4d7g8kcf" path="res://Scenes/TransitionManager/TransitionScenes/tearing_paper_vertical.gd" id="1_sudsi"]
[ext_resource type="AudioStream" uid="uid://c408td73tq17t" path="res://Assets/Sounds/SE/broken_glass.ogg" id="2_bmlpo"]

[node name="TearingPaper" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sudsi")

[node name="Pass1" type="SubViewport" parent="."]
unique_name_in_owner = true
size = Vector2i(1152, 648)

[node name="Background" type="ColorRect" parent="Pass1"]
custom_minimum_size = Vector2(1152, 648)
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="BrokenPageLeftMask" type="Polygon2D" parent="Pass1"]
unique_name_in_owner = true
position = Vector2(577, 650)
offset = Vector2(-577, -650)
polygon = PackedVector2Array(0, 648, 497.5, 648, 511.5, 641, 514.8, 641, 516.8, 639, 519.4, 639, 518, 631.6, 518, 628.2, 523.3, 626, 525.8, 626, 526.8, 618, 528, 618, 528, 612, 520, 606.4, 529.3, 605, 538.6, 605, 539.3, 601.9, 533.3, 598.9, 543, 581.5, 543, 578.3, 528.2, 576, 525.9, 576, 537, 547.4, 537, 544.6, 526.4, 541, 528, 532.2, 528, 529.6, 514.9, 525.2, 519, 523.2, 519, 519.8, 513.5, 517, 512, 517, 503.7, 506.2, 514.3, 503, 519.5, 503, 520.3, 500.2, 511.1, 493.8, 522.3, 489, 524.8, 489, 533.7, 481, 535.4, 481, 536.4, 478.3, 528.6, 472.4, 536, 468.1, 536, 464.4, 531.2, 463.3, 536.1, 462, 541.6, 462, 542.3, 458.9, 536.6, 456, 540.3, 455, 547.4, 455, 548.4, 452.4, 541.2, 446.2, 547, 437.6, 547, 436.3, 550.5, 435, 554, 435, 562, 424, 564.4, 424, 562, 410.6, 562, 407.9, 574.7, 397, 576.6, 397, 577.3, 393.9, 569.4, 389.9, 578, 376.1, 578, 371.4, 563.9, 360.9, 572, 347.6, 572, 345, 555.4, 333, 562.5, 333, 563.3, 330, 554.9, 325.3, 569.6, 315, 572.4, 315, 573.4, 312.3, 563.1, 304.1, 574, 289, 576, 289, 576, 284, 570, 284, 574, 281, 574, 276.8, 562.8, 271.1, 562, 261, 562, 250.3, 572.3, 246, 575.7, 246, 576.3, 242.8, 571.7, 240.9, 578, 233.8, 578, 229.5, 570.5, 227.3, 573, 223.6, 573, 218.6, 544, 207, 547, 205.1, 547, 201.4, 535.2, 199, 533.7, 199, 539, 182.3, 539, 179.4, 528.4, 177, 533.1, 169, 535.8, 169, 527, 143.5, 527, 141.2, 505.9, 118, 505, 113.7, 505, 108.2, 501, 104.2, 501, 101.6, 491.4, 98, 490.5, 98, 492, 92.2, 492, 88.6, 484.3, 86, 483.5, 86, 484, 84.2, 484, 77.8, 468.8, 69.8, 470.5, 69, 475.6, 69, 476.3, 65.8, 470.7, 63.3, 474.2, 63, 482.4, 63, 483.4, 60.3, 475.8, 54.6, 488.5, 47, 490.2, 47, 508.2, 12, 509.2, 12, 511, 8.5, 511, 5.9, 502.1, 0, 0, 0)
uv = PackedVector2Array(0, 648, 497.5, 648, 511.5, 641, 514.8, 641, 516.8, 639, 519.4, 639, 518, 631.6, 518, 628.2, 523.3, 626, 525.8, 626, 526.8, 618, 528, 618, 528, 612, 520, 606.4, 529.3, 605, 538.6, 605, 539.3, 601.9, 533.3, 598.9, 543, 581.5, 543, 578.3, 528.2, 576, 525.9, 576, 537, 547.4, 537, 544.6, 526.4, 541, 528, 532.2, 528, 529.6, 514.9, 525.2, 519, 523.2, 519, 519.8, 513.5, 517, 512, 517, 503.7, 506.2, 514.3, 503, 519.5, 503, 520.3, 500.2, 511.1, 493.8, 522.3, 489, 524.8, 489, 533.7, 481, 535.4, 481, 536.4, 478.3, 528.6, 472.4, 536, 468.1, 536, 464.4, 531.2, 463.3, 536.1, 462, 541.6, 462, 542.3, 458.9, 536.6, 456, 540.3, 455, 547.4, 455, 548.4, 452.4, 541.2, 446.2, 547, 437.6, 547, 436.3, 550.5, 435, 554, 435, 562, 424, 564.4, 424, 562, 410.6, 562, 407.9, 574.7, 397, 576.6, 397, 577.3, 393.9, 569.4, 389.9, 578, 376.1, 578, 371.4, 563.9, 360.9, 572, 347.6, 572, 345, 555.4, 333, 562.5, 333, 563.3, 330, 554.9, 325.3, 569.6, 315, 572.4, 315, 573.4, 312.3, 563.1, 304.1, 574, 289, 576, 289, 576, 284, 570, 284, 574, 281, 574, 276.8, 562.8, 271.1, 562, 261, 562, 250.3, 572.3, 246, 575.7, 246, 576.3, 242.8, 571.7, 240.9, 578, 233.8, 578, 229.5, 570.5, 227.3, 573, 223.6, 573, 218.6, 544, 207, 547, 205.1, 547, 201.4, 535.2, 199, 533.7, 199, 539, 182.3, 539, 179.4, 528.4, 177, 533.1, 169, 535.8, 169, 527, 143.5, 527, 141.2, 505.9, 118, 505, 113.7, 505, 108.2, 501, 104.2, 501, 101.6, 491.4, 98, 490.5, 98, 492, 92.2, 492, 88.6, 484.3, 86, 483.5, 86, 484, 84.2, 484, 77.8, 468.8, 69.8, 470.5, 69, 475.6, 69, 476.3, 65.8, 470.7, 63.3, 474.2, 63, 482.4, 63, 483.4, 60.3, 475.8, 54.6, 488.5, 47, 490.2, 47, 508.2, 12, 509.2, 12, 511, 8.5, 511, 5.9, 502.1, 0, 0, 0)
polygons = [PackedInt32Array(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138)]

[node name="BrokenPageRightMask" type="Polygon2D" parent="Pass1"]
unique_name_in_owner = true
position = Vector2(467, 649)
offset = Vector2(-1, -649)
polygon = PackedVector2Array(686, 0, 33, 0, 33, 2.1, 41.7, 7.9, 22, 42.5, 22, 43.8, 9.4, 52, 6.6, 52, 5.6, 54.7, 12.9, 60.4, 7.8, 61, 1.4, 61, 0.7, 64.2, 4.8, 65.9, 0, 66.9, 0, 72.3, 14.6, 80.5, 14, 83.8, 14, 88.4, 21.7, 91, 22.5, 91, 21, 96.8, 21, 100.4, 32.6, 105, 37, 114.3, 37, 121, 47.3, 129, 47.9, 129, 57.9, 144, 58.5, 144, 65.1, 165.7, 59, 175.4, 59, 179.5, 67.7, 182, 69.3, 182, 64, 198.7, 64, 201.7, 75.9, 203.8, 73, 206, 73, 209.4, 103.5, 221.5, 101, 225.4, 101, 230.5, 108.4, 232.6, 104.9, 238, 103.5, 238, 102.7, 240.9, 106.6, 243.2, 95.7, 248, 92.8, 248, 94, 261.2, 94, 274.2, 103.7, 279, 97.6, 284.4, 98.6, 287, 105.9, 287, 93, 303.3, 93, 306.1, 103.1, 312.5, 88.4, 323, 86.4, 323, 85.7, 326.2, 93.8, 329.8, 86, 331.3, 86, 335, 102, 347, 94, 360.4, 94, 363.1, 110.6, 373.8, 102.9, 386, 101, 386, 101, 392.6, 107.7, 394.2, 95.3, 405, 92.6, 405, 95, 418.4, 95, 421.2, 83.2, 433, 78.7, 433, 73.7, 444, 72.5, 444, 71.7, 446.8, 79, 451.7, 73.6, 453, 66.4, 453, 65.7, 456.1, 71.8, 459.1, 65.7, 461, 60.3, 461, 59.7, 464.3, 66.1, 466.7, 58, 470.8, 58, 474.4, 66.7, 477.9, 56, 486, 56, 486.7, 45.7, 491, 42.5, 491, 41.7, 493.8, 50.5, 499.9, 40.7, 503, 35.8, 503, 34.7, 505.2, 42, 515.5, 42, 518.2, 47.7, 521.4, 43, 523.8, 43, 527.4, 59.3, 532.8, 57, 540.7, 57, 543.4, 67.1, 546.8, 56, 575.6, 56, 578.7, 70.8, 581, 73, 581, 66.7, 595, 65, 595, 65, 601.6, 67.5, 602.1, 54.7, 604, 50.6, 604, 49.6, 606.6, 58.5, 614.4, 57, 621.8, 57, 623.7, 54.5, 625, 50, 625, 50, 636.6, 25.7, 646.8, 25.9, 648, 686, 648)
uv = PackedVector2Array(1152, 5.96046e-06, 499, 5.96046e-06, 499, 2.10001, 507.7, 7.90001, 488, 42.5, 488, 43.8, 475.4, 52, 472.6, 52, 471.6, 54.7, 478.9, 60.4, 473.8, 61, 467.4, 61, 466.7, 64.2, 470.8, 65.9, 466, 66.9, 466, 72.3, 480.6, 80.5, 480, 83.8, 480, 88.4, 487.7, 91, 488.5, 91, 487, 96.8, 487, 100.4, 498.6, 105, 503, 114.3, 503, 121, 513.3, 129, 513.9, 129, 523.9, 144, 524.5, 144, 531.1, 165.7, 525, 175.4, 525, 179.5, 533.7, 182, 535.3, 182, 530, 198.7, 530, 201.7, 541.9, 203.8, 539, 206, 539, 209.4, 569.5, 221.5, 567, 225.4, 567, 230.5, 574.4, 232.6, 570.9, 238, 569.5, 238, 568.7, 240.9, 572.6, 243.2, 561.7, 248, 558.8, 248, 560, 261.2, 560, 274.2, 569.7, 279, 563.6, 284.4, 564.6, 287, 571.9, 287, 559, 303.3, 559, 306.1, 569.1, 312.5, 554.4, 323, 552.4, 323, 551.7, 326.2, 559.8, 329.8, 552, 331.3, 552, 335, 568, 347, 560, 360.4, 560, 363.1, 576.6, 373.8, 568.9, 386, 567, 386, 567, 392.6, 573.7, 394.2, 561.3, 405, 558.6, 405, 561, 418.4, 561, 421.2, 549.2, 433, 544.7, 433, 539.7, 444, 538.5, 444, 537.7, 446.8, 545, 451.7, 539.6, 453, 532.4, 453, 531.7, 456.1, 537.8, 459.1, 531.7, 461, 526.3, 461, 525.7, 464.3, 532.1, 466.7, 524, 470.8, 524, 474.4, 532.7, 477.9, 522, 486, 522, 486.7, 511.7, 491, 508.5, 491, 507.7, 493.8, 516.5, 499.9, 506.7, 503, 501.8, 503, 500.7, 505.2, 508, 515.5, 508, 518.2, 513.7, 521.4, 509, 523.8, 509, 527.4, 525.3, 532.8, 523, 540.7, 523, 543.4, 533.1, 546.8, 522, 575.6, 522, 578.7, 536.8, 581, 539, 581, 532.7, 595, 531, 595, 531, 601.6, 533.5, 602.1, 520.7, 604, 516.6, 604, 515.6, 606.6, 524.5, 614.4, 523, 621.8, 523, 623.7, 520.5, 625, 516, 625, 516, 636.6, 491.7, 646.8, 491.9, 648, 1152, 648)
polygons = [PackedInt32Array(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131)]

[node name="FinalTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_bmlpo")
